# decorator_proxy

Decorator/: CMakeLists.txt  main.cpp
Proxy/: CMakeLists.txt  main.cpp
